--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
  "main": "build/index.js",
  "types": "build/index.d.ts",
  "dependencies": {
-  "pdfjs-dist": "^2.6.347",
-  "react-pdf": "^5.2.0",
-  "styled-components": "^5.2.1"
- },
- "devDependencies": {
-  "@testing-library/jest-dom": "^5.11.9",
-  "@testing-library/react": "^11.2.5",
-  "@testing-library/user-event": "^13.0.6",
-  "@types/jest": "^26.0.21",
-  "@types/node": "^14.14.35",
-  "@types/pdfjs-dist": "^2.7.0",
-  "@types/react": "^17.0.3",
-  "@types/react-dom": "^17.0.2",
-  "@types/react-pdf": "4.0.5",
-  "@types/styled-components": "^5.1.9",
-  "generate-changelog": "^1.8.0",
-  "react": "^17.0.1",
-  "react-dom": "^17.0.1",
-  "react-scripts": "4.0.3",
-  "typescript": "^4.2.3"
- },
+    "pdfjs-dist": "2.4.456",
+    "react-pdf": "5.0.0",
+    "styled-components": "^5.1.1"
+   },
+   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/pdfjs-dist": "2.1.5",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-pdf": "4.0.5",
+    "@types/styled-components": "^5.1.2",
+    "generate-changelog": "^1.8.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "typescript": "^3.9.7"
+   },
  "scripts": {
   "start": "react-scripts start",
   "build": "rm -rf build && tsc -p tsconfig-npm.json",
