--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
  "main": "build/index.js",
  "types": "build/index.d.ts",
  "dependencies": {
-  "pdfjs-dist": "^2.6.347",
-  "react-pdf": "^5.2.0",
-  "styled-components": "^5.2.1"
+  "pdfjs-dist": "2.4.456",
+  "react-pdf": "5.0.0",
+  "styled-components": "^5.1.1",
  },
  "devDependencies": {
   "@testing-library/jest-dom": "^5.11.9",
