--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
  "main": "build/index.js",
  "types": "build/index.d.ts",
  "dependencies": {
-  "pdfjs-dist": "^2.6.347",
-  "react-pdf": "^5.2.0",
-  "styled-components": "^5.2.1"
+    "pdfjs-dist": "2.4.456",
+    "react-pdf": "5.0.0",
+    "styled-components": "^5.1.1"
  },
  "devDependencies": {
-  "@testing-library/jest-dom": "^5.16.4",
-  "@testing-library/react": "^13.3.0",
-  "@testing-library/user-event": "^14.2.1",
-  "@types/jest": "^28.1.2",
-  "@types/node": "^18.0.0",
-  "@types/pdfjs-dist": "^2.10.378",
-  "@types/react": "^18.0.14",
-  "@types/react-dom": "^17.0.2",
-  "@types/react-pdf": "4.0.5",
-  "@types/styled-components": "^5.1.25",
-  "generate-changelog": "^1.8.0",
-  "react": "^18.0.14",
-  "react-dom": "^18.0.14",
-  "react-scripts": "5.0.1",
-  "typescript": "^4.7.4"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/pdfjs-dist": "2.1.5",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-pdf": "4.0.5",
+    "@types/styled-components": "^5.1.2",
+    "generate-changelog": "^1.8.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "typescript": "^3.9.7"
  },
  "scripts": {
   "start": "react-scripts start",
